<?xml version="1.0"?>
<package format="2">
  <name>nicar_gui</name>
  <version>0.0.0</version>
  <description>The nicar_gui package</description>
  <maintainer email="jerrygu.gjw@gmail.com">JW. Gu</maintainer>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
	<build_depend>move_base_msgs</build_depend>
	<build_depend>actionlib</build_depend>
    <build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
	<exec_depend>move_base_msgs</exec_depend>
	<exec_depend>actionlib</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>image_transport</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
